[package]
name = "phux-protocol"
description = "Wire protocol for phux: frame format, message catalog, codec, diff types."
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
# By default phux-protocol is a near-empty shell: only stable IDs and the
# protocol-version constant. This is what docs.rs and crates.io see — it has
# no git-only deps, so it publishes cleanly.
default = []
# `server` activates the full type surface, including libghostty-vt
# re-exports (ADR-0008) and the wire codec. Every in-workspace consumer
# enables this; external consumers will too.
server = ["dep:libghostty-vt", "dep:smallvec"]

[dependencies]
thiserror.workspace = true
bytes.workspace = true
bitflags = "2"
# `smallvec` gives `Cell::text` inline storage for the common case
# (empty / ASCII / one-base + one-combining grapheme), eliminating the
# per-cell `Vec` header + heap allocation on 80x24+ grids. Wire format
# is unchanged — the codec encodes length-prefix + chars regardless of
# the in-memory collection type. Optional because it's only used by the
# server-gated `diff` module.
smallvec = { workspace = true, optional = true }
libghostty-vt = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
insta.workspace = true

[package.metadata.docs.rs]
# Render the full API on docs.rs, including the libghostty-backed surface,
# with the "Available on feature ..." badge enabled via `--cfg docsrs`.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
