[package]
name = "phux-protocol"
description = "Wire protocol for phux: frame format, message catalog, codec, diff types."
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
# By default phux-protocol is a near-empty shell: stable IDs, capability
# atoms, and the protocol-version constant. This is what docs.rs and
# crates.io see — it has no git-only deps, so it publishes cleanly.
default = []
# `server` activates the full type surface, including libghostty-vt input-
# atom re-exports (ADR-0008) and the wire codec. Every in-workspace
# consumer enables this; external consumers will too.
server = ["dep:libghostty-vt"]

[dependencies]
thiserror.workspace = true
bytes.workspace = true
bitflags = "2"
libghostty-vt = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
insta.workspace = true

[package.metadata.docs.rs]
# Render the full API on docs.rs, including the libghostty-backed surface,
# with the "Available on feature ..." badge enabled via `--cfg docsrs`.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
