[package]
name = "phux-protocol"
description = "Wire protocol for phux: frame format, message catalog, codec, diff types."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["terminal", "multiplexer", "protocol", "pty", "tui"]
categories = ["command-line-interface", "network-programming", "encoding"]

[lints]
workspace = true

[features]
# By default phux-protocol is a near-empty shell: stable IDs, capability
# atoms, the protocol-version constant, and the policy vocabulary (ALPN
# constants, peer identity). This is what docs.rs and crates.io see — it
# has no git-only deps, so it publishes cleanly.
default = []
# `server` activates the full type surface, including libghostty-vt input-
# atom re-exports (ADR-0008) and the wire codec. Every in-workspace
# consumer enables this; external consumers will too.
server = ["dep:libghostty-vt", "dep:png", "libghostty-vt/kitty-graphics", "libghostty-vt/png"]

[dependencies]
thiserror.workspace = true
bytes.workspace = true
bitflags = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
# Derives TryFrom<u32> for the wire's PhysicalKey enum (ADR-0024). Pure Rust,
# wasm-safe; the same crate libghostty-vt uses for its key discriminants.
int-enum = "1.2"
libghostty-vt = { workspace = true, optional = true }
png = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
insta.workspace = true

[package.metadata.docs.rs]
# Render the full API on docs.rs, including the libghostty-backed surface,
# with the "Available on feature ..." badge enabled via `--cfg docsrs`.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
