[package]
name = "phux-server"
description = "phux daemon: owns PTYs, terminal grids, and client IPC."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
# Compile-in the tokio-console async-runtime debugger. Off by default
# (pulls a TCP server + extra task instrumentation). Requires Tokio
# built with `--cfg tokio_unstable`, so build with:
#   RUSTFLAGS='--cfg tokio_unstable' cargo build --features tokio-console
# Then `cargo install tokio-console` and `tokio-console` to attach.
tokio-console = ["dep:console-subscriber"]

[dependencies]
phux-protocol = { workspace = true, features = ["server"] }
phux-core.workspace = true
# phux-config supplies the canonical `defaults.history-limit` default
# (`DefaultsCfg::default().history_limit`) so `ServerConfig::with_default_socket`
# does not duplicate the `50_000` constant. The dep is config-shape only:
# the server reads the schema's default and threads the resolved value into
# each `TerminalActor`'s scrollback cap.
phux-config.workspace = true
# `GET_SCREEN` serializes `phux_core::ScreenState` into the COMMAND_RESULT
# JSON payload (ADR-0022 §2); the CLI deserializes the same contract.
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
# tokio-util gives us `CancellationToken` (hierarchical cancellation,
# replacing the per-actor / per-loop `oneshot::Sender<()>` shutdown
# pattern). The `rt` feature is what gates `sync::CancellationToken`
# in current tokio-util releases.
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
bytes.workspace = true
# `futures-util` brings `FuturesUnordered` + `StreamExt`, which `handle_attach`
# uses to fan out per-pane `SnapshotRequest`s concurrently so attach latency
# scales with the slowest pane's reply time, not their sum. Already in the
# dep graph transitively via tokio; declared here for direct use. `std` (the
# default feature set we want) is implied by leaving `default-features` on.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# Optional: opt-in via the `tokio-console` feature. See the feature
# comment above for the build incantation.
console-subscriber = { version = "0.4", optional = true }
# portable-pty is the PTY backend TerminalActor drives (phux-byc.5). It is a
# regular dependency because the actor owns the master fd; its blocking
# read/write halves bridge to async via spawn_blocking + mpsc channels.
portable-pty.workspace = true

# libghostty-vt is workspace-pinned (see workspace Cargo.toml). Build
# requires zig 0.15.x on PATH; the nix dev shell provides it.
libghostty-vt.workspace = true

# `defaults.cwd-inheritance = inherit-focused` (phux-cs6) opens a new pane
# in the focused pane's live CWD. No portable VT signal carries this (the
# bundled libghostty surfaces OSC 7 without exposing the path), so the
# server queries the kernel for the PTY child's working directory. On
# macOS that means `proc_pidinfo(PROC_PIDVNODEPATHINFO)` via `libc`; Linux
# uses the dependency-free `/proc/<pid>/cwd` symlink (no extra dep). `libc`
# is already in the dependency graph transitively (tokio, portable-pty);
# this promotes it to a direct, macOS-gated dependency for the FFI decls.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
insta.workspace = true
criterion.workspace = true
dhat.workspace = true
# `test-util` enables `tokio::time::pause`/`advance` and the
# `#[tokio::test(start_paused = true)]` macro arg. Required by the
# `phux-q0e.3` tick-scheduler tests, which advance virtual time
# deterministically to exercise the 33 Hz interval without wall-clock
# sleeps.
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true

[[bench]]
name = "capture"
harness = false
