[package]
name = "phux-server"
description = "phux daemon: owns PTYs, terminal grids, and client IPC."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = ["webtransport"]
# WebTransport (HTTP/3 over QUIC) listener for browser consumers
# (phux-0wmf). Browsers cannot open raw QUIC, so this is their door to
# QUIC-class transport; `phux-web` dials it, falling back to WebSocket.
# On by default because the shipped binary should serve browsers out of
# the box; disable for a leaner daemon that keeps UDS/WS/QUIC only.
webtransport = ["dep:wtransport"]
# Compile-in the tokio-console async-runtime debugger. Off by default
# (pulls a TCP server + extra task instrumentation). Requires Tokio
# built with `--cfg tokio_unstable`, so build with:
#   RUSTFLAGS='--cfg tokio_unstable' cargo build --features tokio-console
# Then `cargo install tokio-console` and `tokio-console` to attach.
tokio-console = ["dep:console-subscriber"]

[dependencies]
phux-protocol = { workspace = true, features = ["server"] }
phux-core.workspace = true
# phux-config supplies the canonical `defaults.history-limit` default
# (`DefaultsCfg::default().history_limit`) so `ServerConfig::with_default_socket`
# does not duplicate the `50_000` constant. The dep is config-shape only:
# the server reads the schema's default and threads the resolved value into
# each `TerminalActor`'s scrollback cap.
phux-config.workspace = true
# phux-plugin supplies the shared child-process runner (`run_command_spec`:
# env injection, kill_on_drop, timeout) behind the server-side event-hook
# dispatcher (`crate::hooks`, phux-r82.1). Reusing it keeps a single
# execution path — the no-in-process-host rule — for plugin actions and
# event hooks. Internal workspace crate; adds no new external dependencies.
phux-plugin.workspace = true
# `[[hooks.<name>]]` `when` predicates are `BTreeMap<String, toml::Value>`
# in the phux-config schema, so the hook dispatcher's matcher names
# `toml::Value` directly. Already in the graph via phux-config.
toml.workspace = true
# `GET_SCREEN` serializes `phux_core::ScreenState` into the COMMAND_RESULT
# JSON payload (ADR-0022 §2); the CLI deserializes the same contract.
chrono.workspace = true
# `derive` for the versioned graceful-upgrade state blob (ADR-0032); the
# JSON codec is `serde_json`, already in the dep graph.
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Non-blocking file sink for the telemetry foundation: `PHUX_LOG` tees
# server logs to a file, and the client (which shares this module) logs
# to a file only. See the workspace dep for the full justification.
tracing-appender.workspace = true
tokio.workspace = true
# tokio-util gives us `CancellationToken` (hierarchical cancellation,
# replacing the per-actor / per-loop `oneshot::Sender<()>` shutdown
# pattern). The `rt` feature is what gates `sync::CancellationToken`
# in current tokio-util releases.
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
# `nix` (signal feature only) delivers POSIX job-control signals to a pane's
# process group for the supervisory "freeze / resume / interrupt / terminate /
# kill" surface (ADR-0033). `portable_pty::Child` only exposes `.kill()`
# (SIGKILL); the reversible `Freeze` (SIGSTOP) / `Resume` (SIGCONT) brake and
# graceful `SIGTERM`/`SIGINT` need arbitrary signals sent to the whole process
# group (`killpg`), which the safe `nix` wrapper provides without `unsafe`
# libc FFI. Already in the lock tree (0.29) via the PTY stack; the `signal`
# feature is the minimal surface.
#
# The `term` feature gates `nix::unistd::tcgetpgrp`, which the agent-state
# detector (ADR-0046) uses to ask the kernel which process group currently
# owns a pane's tty — that is how it identifies WHICH agent binary is
# running, rather than parsing the title (a string the program merely chose
# to print). `nix` is used here rather than `libc` because `libc` is declared
# under a `cfg(target_os = "macos")` gate below and is therefore unavailable
# on Linux; the safe `nix` wrapper is cross-platform and adds no new crate.
nix = { version = "0.29", default-features = false, features = ["signal", "term"] }
# The agent-state detector's rules are user-editable TOML manifests
# (ADR-0046 §C): its predicates are DATA compiled at load, not code, so that
# agent-TUI churn is decoupled from our release cadence. A hand-rolled matcher
# over operator-supplied patterns is exactly the homegrown-parser trap. `regex`
# compiles the whole predicate tree once when a manifest loads and evaluates it
# at <= 10 Hz per pane. This compiles NO new crate: `regex` 1.12 is already in
# `Cargo.lock`, pulled in transitively by `tracing-subscriber`'s `env-filter`.
# Promoting it to a direct dependency only names what we already build.
regex = "1"
bytes.workspace = true
# `futures-util` brings `FuturesUnordered` + `StreamExt`, which `handle_attach`
# uses to fan out per-pane `SnapshotRequest`s concurrently so attach latency
# scales with the slowest pane's reply time, not their sum. Already in the
# dep graph transitively via tokio; declared here for direct use. `std` (the
# default feature set we want) is implied by leaving `default-features` on.
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
# WebSocket transport for browser consumers (phux-486.4). The browser client
# speaks the identical length-prefixed FrameKind wire inside binary messages.
# default-features off avoids pulling a TLS stack — ws:// is terminated locally
# (dev) or at an edge proxy; the daemon only performs the server handshake.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
# Remote-consumer auth + encryption (ADR-0031). These are the vetted-crypto
# substrate the "no homegrown crypto" rule (CONTRIBUTING.md) mandates; none was
# in the tree before. rustls/tokio-rustls terminate TLS 1.3 on the WebSocket
# listener for `wss://` remote consumers; the `ring` provider is selected
# explicitly because it needs only a C compiler (no cmake, unlike aws-lc-rs).
# PEM cert+key parsing uses rustls-pki-types (re-exported via rustls), not the
# now-unmaintained rustls-pemfile (RUSTSEC-2025-0134). subtle gives a
# constant-time token comparison (no timing oracle on the bearer token).
# getrandom mints tokens from the OS CSPRNG. sha2 + hex compute the cert
# fingerprint shown at pairing time. All are loopback-irrelevant: they only
# engage when a TLS cert + token store are configured.
rustls.workspace = true
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
subtle = "2"
getrandom = "0.2"
sha2 = "0.10"
hex = "0.4"
# rcgen generates the persisted self-signed certificate so a remote
# (non-loopback) WebSocket listener provisions TLS with zero operator setup —
# no openssl, no manual PEM (ADR-0031 "seamless"). `ring` backend (not the
# default aws-lc-rs) keeps the cmake-free build the rest of the crypto stack
# relies on.
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# QUIC transport (phux-y8v6, ADR-0007). quinn is the QUIC stack ADR-0007
# names by name ("a future QUIC impl ... via `quinn`"); it gives connection
# migration, 0-RTT resumption, and mandatory TLS 1.3 — the Mosh-class UX
# properties — without reimplementing SSP. It is chosen over cloudflare/quiche
# deliberately: quiche is sans-I/O (we would hand-drive UDP sockets + the
# connection state machine) and links BoringSSL via cmake, whereas quinn is
# tokio-native (its `RecvStream`/`SendStream` are `AsyncRead`/`AsyncWrite`, so
# it drops straight into the `FrameReader`/`FrameWriter` trait surface) and
# rides the rustls 0.23 + `ring` provider already in this crate — no new
# native toolchain dependency. `default-features = false` with `rustls-ring`
# keeps us off quinn's default aws-lc-rs/cmake path and off the
# `platform-verifier` client cert verifier we do not use (the server is the
# listener; the consumer pins the self-signed cert's fingerprint, exactly as
# the `wss://` path does). The `log` feature is deliberately omitted: it
# resolves to `tracing/log`, which feature-unification would turn on workspace-
# wide, inflating every `tracing` macro's expansion (and tripping
# `clippy::cognitive_complexity` in tracing-heavy functions far from here).
quinn.workspace = true
# Hub outbound dialer (phux-v45.3, ADR-0038): the hub authenticates to its
# satellites exactly like a remote consumer, so it dials through the same
# shared establishment stack (fingerprint-pin TLS, bearer preamble /
# Authorization header) the attach CLI uses. Internal workspace crate,
# factored out of phux-client; adds no new external dependencies — quinn,
# rustls, tokio-tungstenite, sha2, and hex are all already in this crate's
# graph for the listener side.
phux-dial.workspace = true
# WebTransport listener (phux-0wmf, `webtransport` feature). Browsers cannot
# open raw QUIC, so the quinn listener above is unreachable from `phux-web`;
# WebTransport (HTTP/3 CONNECT over QUIC, RFC 9220-adjacent draft) is the one
# QUIC-class transport a browser exposes. wtransport implements BOTH the
# server role (this listener) and the client role (the native test dialer in
# `transport::webtransport`'s tests), riding the exact quinn 0.11 + rustls
# 0.23 + `ring` stack already in this crate (`default-features = false` +
# `ring` keeps it off aws-lc-rs/cmake; `self-signed` stays off because cert
# provisioning reuses this crate's rcgen path). The hyperium h3 +
# h3-webtransport pair was evaluated and rejected: h3-webtransport is
# server-only, and h3 0.0.8's client builder cannot advertise the
# SETTINGS_ENABLE_WEBTRANSPORT the server-side session accept requires — so
# the handshake, auth gating, and wire echo could not be tested honestly
# without a browser in the loop. wtransport's spawned driver tasks are Send
# futures, compatible with the current-thread runtime (ADR-0003).
wtransport = { version = "0.7.1", optional = true, default-features = false, features = ["ring"] }
# Optional: opt-in via the `tokio-console` feature. See the feature
# comment above for the build incantation.
console-subscriber = { version = "0.5", optional = true }
# portable-pty is the PTY backend TerminalActor drives (phux-byc.5). It is a
# regular dependency because the actor owns the master fd; its blocking
# read/write halves bridge to async via spawn_blocking + mpsc channels.
portable-pty.workspace = true
# Re-adopt inherited PTY masters + children across the graceful-upgrade
# re-exec (ADR-0032): rebuilds portable-pty trait objects from (fd, pid).
portable-pty-adopt.workspace = true
# Graceful-upgrade orchestration (ADR-0032): clear FD_CLOEXEC on the
# descriptors the re-exec'd image inherits (`rustix::io` fcntl), and carry the
# handoff blob in an anonymous temp file (`tempfile`). `rustix` is libc-free
# and cross-platform, unlike this crate's macOS-gated `libc`.
rustix = { version = "0.38", default-features = false, features = ["std", "fs"] }
tempfile.workspace = true

# libghostty-vt is workspace-pinned (see workspace Cargo.toml). Build
# requires zig 0.15.x on PATH; the nix dev shell provides it.
libghostty-vt.workspace = true

# `defaults.cwd-inheritance = inherit-focused` (phux-cs6) opens a new pane
# in the focused pane's live CWD. No portable VT signal carries this (the
# bundled libghostty surfaces OSC 7 without exposing the path), so the
# server queries the kernel for the PTY child's working directory. On
# macOS that means `proc_pidinfo(PROC_PIDVNODEPATHINFO)` via `libc`; Linux
# uses the dependency-free `/proc/<pid>/cwd` symlink (no extra dep). `libc`
# is already in the dependency graph transitively (tokio, portable-pty);
# this promotes it to a direct, macOS-gated dependency for the FFI decls.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
insta.workspace = true
criterion.workspace = true
dhat.workspace = true
# `test-util` enables `tokio::time::pause`/`advance` and the
# `#[tokio::test(start_paused = true)]` macro arg. Required by the
# `phux-q0e.3` tick-scheduler tests, which advance virtual time
# deterministically to exercise the 33 Hz interval without wall-clock
# sleeps.
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
# The WebTransport tests dial the listener with wtransport's native client;
# `dangerous-configuration` unlocks `with_no_cert_validation` so the test
# client trusts the throwaway self-signed leaf (the TLS handshake and full
# HTTP/3 CONNECT are still exercised end-to-end). Test builds only.
wtransport = { version = "0.7.1", default-features = false, features = ["ring", "dangerous-configuration"] }

[[bench]]
name = "capture"
harness = false
