[package]
name = "phux"
description = "phux — a terminal multiplexer built on libghostty-vt."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "phux"
path = "src/main.rs"

[dependencies]
phux-protocol = { workspace = true, features = ["server"] }
phux-core.workspace = true
phux-server.workspace = true
phux-client.workspace = true
phux-config.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
# `phux snapshot --json` emits the stable ScreenState contract (ADR-0022).
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# `process` feature only: `setsid(2)` to detach an auto-spawned server
# from the launching client's controlling terminal so it survives the
# terminal closing. Same crate already used by phux-client (termios);
# no new third-party dependency enters the workspace.
rustix = { version = "0.38", default-features = false, features = ["std", "process"] }

[dev-dependencies]
# Raw-PTY black-box harnesses (examples/) that spawn the real `phux attach`
# binary in a pseudoterminal, drive it, resize the PTY, and inspect what the
# client paints via a libghostty oracle. Used to reproduce/verify
# host-terminal rendering bugs (e.g. phux-8v1 resize duplication) that the
# tmux probe masks because tmux reflows + reinterprets the byte stream itself.
portable-pty.workspace = true
libghostty-vt.workspace = true

[features]
# Heap profiling via dhat. Swaps the global allocator for `dhat::Alloc`
# and installs a `dhat::Profiler` guard for the lifetime of `main()`.
# On clean shutdown, the guard's Drop writes `./dhat-heap.json` (viewable
# at https://nnethercote.github.io/dh_view/dh_view.html).
#
# Run with: cargo run --features dhat-heap -- server
# Warning: the instrumented allocator is significantly slower than the
# system allocator; do not use in production builds.
dhat-heap = ["dep:dhat"]
