[package]
name = "phux"
description = "phux — a terminal multiplexer built on libghostty-vt."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "phux"
path = "src/main.rs"

[dependencies]
phux-protocol = { workspace = true, features = ["server"] }
phux-core.workspace = true
phux-server.workspace = true
phux-client.workspace = true
phux-config.workspace = true
phux-plugin.workspace = true
# `phux relay` fronts the reference relay: `run` drives its runtime in the
# foreground and `pair` mints route-bound tunnel tokens (workspace crate;
# no new third-party dependency enters).
phux-relay.workspace = true
clap.workspace = true
# `phux pair --qr` renders the pairing connect-link as a scannable terminal QR.
qrcode.workspace = true
dhat = { workspace = true, optional = true }
# `phux snapshot --json` emits the stable ScreenState contract (ADR-0022).
serde.workspace = true
serde_json.workspace = true
# `phux config show` renders the effective merged config table as TOML.
toml.workspace = true
toml_edit.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# `process` feature only: `setsid(2)` to detach an auto-spawned server
# from the launching client's controlling terminal so it survives the
# terminal closing. Same crate already used by phux-client (termios);
# no new third-party dependency enters the workspace.
rustix = { version = "0.38", default-features = false, features = ["std", "process"] }

[dev-dependencies]
# Command-level wire mocks encode framed replies with the protocol's native
# BytesMut API; bytes is already a workspace/runtime dependency.
bytes.workspace = true
# Raw-PTY black-box harnesses (examples/) that spawn the real `phux attach`
# binary in a pseudoterminal, drive it, resize the PTY, and inspect what the
# client paints via a libghostty oracle. Used to reproduce/verify
# host-terminal rendering bugs (e.g. phux-8v1 resize duplication) that the
# tmux probe masks because tmux reflows + reinterprets the byte stream itself.
portable-pty.workspace = true
libghostty-vt.workspace = true
# Unique per-test socket directories for the `phux run`/`phux wait`
# end-to-end harness (tests/run_wait_e2e.rs), which spawns the real
# binary against a real PTY-backed server. Already a workspace dep used
# by the phux-server wire tests; no new third-party crate enters.
tempfile.workspace = true

[features]
# Heap profiling via dhat. Swaps the global allocator for `dhat::Alloc`
# and installs a `dhat::Profiler` guard for the lifetime of `main()`.
# On clean shutdown, the guard's Drop writes `./dhat-heap.json` (viewable
# at https://nnethercote.github.io/dh_view/dh_view.html).
#
# Run with: cargo run --features dhat-heap -- server
# Warning: the instrumented allocator is significantly slower than the
# system allocator; do not use in production builds.
dhat-heap = ["dep:dhat"]
